k8s_loan_shared/otel-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: otel-netpol
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: otel-collector

  policyTypes:
  - Ingress
  - Egress

  ingress:
  - from:
    - podSelector: {}   # allow from all apps
    ports:
    - port: 4317
      protocol: TCP

  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
    ports:
    - port: 443
      protocol: TCP
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - port: 53
      protocol: UDP
